clusters/rainbow/core/kube-prometheus-stack/prometheus-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: apps

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: prometheus-kube-prometheus-prometheus
          namespace: system-monitoring
          port: http-web

  tls:
    secretName: apps-cert-prod
    domains:
      - main: prometheus.k8s.tuckerthomas.com
